--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title></title>
-        <link href="../UX_UI_HW_18/CSS/style.css" type="text/css" rel="stylesheet">
+        <link href="CSS/style.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
