media query submission

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="lineP"></div>
             </section>
 
-            <section>
+            <section class="Grid">
             <div class="workGrid">
 
                 <div id="cardcontainer1">
@@ -164,10 +164,10 @@
                 </div>
 
                 <div id="cardcontainer3">
-                    <div class="pets">
+                    <!--<div class="pets">-->
                         <img src = "Images/OnlyPetsImage.png" alt ="dog" class ="dogimg">
                         <button class="buttoncase">Mobile Prototype Case Study</button>
-                    </div>   
+                    <!--</div>-->  
                 </div>    
 
                 <div id="petinfo2" class="petsinfo">
